# zenfi-ai

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  log.py  pyproject.toml
backend/app/api/: index.py
backend/app/api/routes/: auth.py  chat.py
backend/app/models/: __init__.py  assets.py  chat.py  dashboard.py  knowledge_base.py  portfolio.py  stocks.py  user.py
backend/app/services/chat/normal/: chat.py  prompt.py
backend/app/settings/: config.py
backend/app/types/: api.py
backend/app/types/chat/: normal.py
backend/app/utils/: db.py
backend/app/utils/tools/finance/: stock_tools.py
backend/app/utils/tools/web_search/: google_search.py
backend/migrations/: env.py
backend/migrations/versions/: ef75e2d4801f_initial_migration.py
docs/: API.md  README.md
frontend/: Dockerfile  middleware.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/logout/: route.ts
frontend/src/app/api/auth/me/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: card.tsx  file-attachment.tsx  loading.tsx  message.tsx  navbar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: auth.ts
