[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.1",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "sqlmodel>=0.0.24",
    "yfinance>=0.2.65",
]
